# CoreProject

./: MANIFEST.in  README.md  classes.py  func.py  pyproject.toml
.github/workflows/: MAIN.yml  python-publish.yml
src/CoreProject/: __init__.py  func.py  main.py
src/CoreProject.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
