[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "CoreProject"
version = "0.0.2"
authors = [
  { name="Mykhailo Hrytsan", email="HMixany@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = ["customtkinter==5.2.0", "darkdetect==0.8.0"]

[project.urls]
"Homepage" = "https://github.com/HMixany/CoreProject.git"
"Bug Tracker" = "https://github.com/HMixany/CoreProject.git"

[project.scripts]
startbook = "CoreProject.main:main"




