[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "CoreProject"
version = "0.1.6"
authors = [
    { name="Mykhailo Hrytsan", email="HMixany@gmail.com" },
    {name="Yaroslav Zubko", email="scriptur@gmail.com"},
    {name="Максим Гребеніченко", email="aaa1113341998825@gmail.com"},
    {name="Андрій Сагун", email="Andreyvovk18@gmail.com"},
    {name="Андрій Бузін", email="buzin.andrei@gmail.com"}
]
description = "Phonebook"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = ["customtkinter==5.2.1"]

[project.urls]
"Homepage" = "https://github.com/HMixany/CoreProject.git"
"Bug Tracker" = "https://github.com/HMixany/CoreProject.git"

[project.scripts]
startbook = "CoreProject.main:main"

[tool.setuptools]
include-package-data = true

